--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,11 @@
-FROM selenium/standalone-chrome:4.1.3-20220327
+FROM jupyter/datascience-notebook
 
 USER root
 
 RUN apt-get update -y && apt-get install -y \
     bash
 
+COPY requirements.txt $PWD
 ADD getCommand.sh /root/getCommand.sh
 RUN chmod +x /root/getCommand.sh
 RUN bash /root/getCommand.sh
-
-COPY requirements.txt $PWD
-RUN pip install -r requirements.txt
